--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Angular8ClientCloudFire</title>
   <base href="/">
+  <!-- <base href="/angular8ClientCloudFire/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/165d179615.js" crossorigin="anonymous"></script>
